--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -1,6 +1,6 @@
 block sites
   #sites
-    .row.align-middle.site-titles
+    div(class="row align-middle site-titles" onmouseover="showSitesFilter()")
       .small-12.column
         input(
           id="search-sites-input"
