--- a/site/views/tabs.pug
+++ b/site/views/tabs.pug
@@ -1,13 +1,13 @@
 nav.row.align-center.menu-main
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="kreuzberg" href="kreuzberg" class="header-link") Kreuzberg?
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="campaign" href="campaign" class="header-link") the Campaign
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="map" href="map" class="header-link") map
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="check" href="check" class="header-link") check your site
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="replacements" href="replacements" class="header-link") replacements
-  .column.text-center
+  .column.shrink.text-center
     a(data-route="about" href="about" class="header-link") about us
