--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -28,7 +28,7 @@ section.component#component-map
                 "icon": new ol.style.Icon({
                   anchor: [0.5, 1],
                   src: isInfiltrated
-                    ? '/assets/img/radioactive-pin--alert.png'
+                    ? '/assets/img/fist-pin--alert.png'
                     : '/assets/img/fist-pin--success.png',
                   scale: 0.75
                 })
@@ -79,10 +79,21 @@ section.component#component-map
       interactions: ol.interaction.defaults({mouseWheelZoom:false}),
     });
 
+    let selectStyle = {};
     const select = new ol.interaction.Select({
-      condition: ol.events.condition.click
+      condition: ol.events.condition.click,
+      style: function(feature) {
+        return new ol.style.Style({
+          "image": new ol.style.Icon({
+            anchor: [0.5, 1],
+            src: '/assets/img/fist-pin--primary.png',
+            scale: 0.75
+          })
+        });
+      }
     });
     map.addInteraction(select);
+
     select.on('select', (e) => {
       if (e.selected.length) {
         const selectedMarkerId = e.selected[0].values_.id || null,
