--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -44,8 +44,8 @@ block sites
                   ul.site-googles
                     each val, index in result.googles
                       li.row.align-middle.alert
-                        .small-8.large-10.column= index
-                        .small-4.large-2.column= val
+                        .small-8.large-9.column= index
+                        .small-4.large-3.column.text-right= val
                     else
                       li.row
                         .column
