--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -20,6 +20,7 @@ block sites
                 .small-2.medium-1
                   img(
                     onclick="centerMapToPin(this)"
+                    data-site= site.id
                     data-latitude= site.latitude
                     data-longitude= site.longitude
                     src="/assets/img/pin-on-map--primary.svg"
