--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -1,12 +1,13 @@
 block sites
   #sites
     .row.align-middle.site-titles
-      .small-6.column.text-right
+      .small-12.large-6.column
         h6 #{i18n.__("sitesListSitenameTitle")}
-      .small-6.column
+      .show-for-large.small-6.column
         h6 #{i18n.__("sitesListResultsTitle")}
     ul.row.align-center.align-middle.site-results-list#sites-results-list
-      li.small-12.medium-8.large-12
+      button(id="btn-sites-results-top" onclick="scrollToTop()")
+      li#search-sites-container.small-12.medium-8.large-12
         input(
           id="search-sites-input"
           type="text"
@@ -23,7 +24,7 @@ block sites
                     data-site= site.id
                     data-latitude= site.latitude
                     data-longitude= site.longitude
-                    src="/assets/img/pin-on-map--primary.svg"
+                    src="/assets/img/pirate-map--primary.svg"
                     alt="pin on map"
                     class="icon-map")
                 .small-10.medium-6.column.site-details
@@ -41,7 +42,7 @@ block sites
                       .column
                         for tag in site.tags
                           span.tag= tag
-                .small-12.medium-5.column
+                .small-10.medium-5.column.small-offset-2.medium-offset-0
                   ul.site-googles
                     each val, index in result.googles
                       li.row.align-middle.alert
@@ -51,3 +52,4 @@ block sites
                       li.row
                         .column
                           b.success #{i18n.__("sitesListResultGoogleFree")}
+
