Enable selecting markers from outside map

--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -32,7 +32,8 @@ section.component#component-map
                     : '/assets/img/fist-pin--success.png',
                   scale: 0.75
                 })
-              }
+              },
+              "id": site.id,
             }
           });
 
