--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -24,6 +24,7 @@ section.component#component-map
                 "name": site.name,
                 "address": site.address,
                 "url": site.href,
+                "linkText": site.linkText,
                 "tags": site.tags,
                 "icon": new ol.style.Icon({
                   anchor: [0.5, 1],
@@ -68,6 +69,21 @@ section.component#component-map
       zoom: 17,
     });
 
+    /**
+     * Popup preparations
+    */
+    const popup = document.getElementById('popup'),
+          popContent = document.getElementById('popup-content'),
+          popCloser = document.getElementById('popup-closer'),
+          overlay = new ol.Overlay({
+            element: popup,
+            autoPan: true,
+            autoPanAnimation: {
+              duration: 250
+            },
+            offset: [0, -60],
+            positioning: 'bottom-center'
+          });
     const map = new ol.Map({
       layers: [
         new ol.layer.Tile({
@@ -77,6 +93,7 @@ section.component#component-map
         vectorLayer
       ],
       target: "map",
+      overlays: [overlay],
       view,
       interactions: ol.interaction.defaults({mouseWheelZoom:false}),
     });
@@ -97,19 +114,45 @@ section.component#component-map
     });
     map.addInteraction(select);
 
+
+    function closePopup() {
+      overlay.setPosition(undefined);
+      popCloser.blur();
+      return false;
+    };
+    popCloser.onclick = closePopup;
+
+    /**
+     *  Clicking on a marker selects and opens popup
+    */
     select.on('select', (event) => {
       if (event.selected.length) {
-        const selectedMarkerId = event.selected[0].get('id'),
+        const coordinates = event.selected[0].getGeometry().getCoordinates(),
+              popInfos = event.selected[0].getProperties(),
+              selectedMarkerId = event.selected[0].get('id'),
               correspondingSiteResult = selectedMarkerId
                 ? document.getElementById(selectedMarkerId)
                 : null;
+
+        // Display popup
+        popContent.innerHTML = `
+          <h3>${popInfos.name}</h3>
+          <address>
+            <span>${popInfos.address ? popInfos.address : ''}</span><br>
+            <a href="${popInfos.url}" title="${popInfos.name} Homepage">${popInfos.linkText}</a>
+          </address>
+        `;
+        overlay.setPosition(coordinates);
+
         if (correspondingSiteResult) {
+          // Select corresponding result in sidebar
           selectElement(correspondingSiteResult);
         } else {
           clearViewClasses();
         }
       } else {
         clearViewClasses();
+        closePopup();
       }
     });
 
