--- a/site/styles/_settings.scss
+++ b/site/styles/_settings.scss
@@ -69,8 +69,8 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #504B64,
+  primary: #003BE3, //1779ba,
+  secondary: #EB184B, //504B64,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -82,10 +82,10 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #0a0a0a;
-$white: #fefefe;
-$body-background: get-color(darkturquoise);
-$body-font-color: $light-gray;
+$black: #000000; // #0a0a0a;
+$white: #ffffff; // #fefefe;
+$body-background: $white;
+$body-font-color: get-color(primary);
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
@@ -171,8 +171,8 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $dark-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $white;
-$anchor-color-hover: get-color(lightturquoise);
+$anchor-color: get-color(primary);
+$anchor-color-hover: get-color(secondary);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
 $hr-width: $global-width;
@@ -587,7 +587,7 @@ $prototype-border-none-breakpoints: $global-prototype-breakpoints;
 $prototype-bordered-breakpoints: $global-prototype-breakpoints;
 $prototype-border-width: rem-calc(1);
 $prototype-border-type: solid;
-$prototype-border-color: $medium-gray;
+$prototype-border-color: get-color(primary);
 
 // 33. Prototype Display
 // ---------------------
