added Analytics as replacement entry

--- a/site/views/replacements.pug
+++ b/site/views/replacements.pug
@@ -3,3 +3,4 @@ section.component#component-replacements
     .small-12.column
       .replacements
         include generated/Fonts
+        include generated/Analytics
